# blackswan

./: .gitignore  Cargo.toml  LICENSE  README.md  rust_out
.github/workflows/: ci.yml  release.yml
bindings/node/: Cargo.toml  index.d.ts  index.js  package.json
bindings/node/src/: engine.rs  lib.rs  provider.rs  types.rs
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/python/blackswan/: __init__.py
bindings/python/src/: engine.rs  lib.rs  provider.rs  types.rs
bindings/python/tests/: test_langgraph_multiagent_poc.py
docs/: api-reference.md  architecture.md  configuration.md  consolidation.md  examples.md  extraction.md  getting-started.md  memory-types.md  recall.md
examples/python/langgraph/: blackswan_langgraph_poc.py  langgraph_multiagent_poc.py
src/: config.rs  enable.rs  engine.rs  error.rs  lib.rs  llm.rs  staleness.rs  types.rs
src/consolidator/: gates.rs  lock.rs  mod.rs  prompts.rs
src/extractor/: coalesce.rs  cursor.rs  mod.rs  prompts.rs
src/recall/: mod.rs  prompts.rs
src/store/: fileops.rs  frontmatter.rs  index.rs  mod.rs
tests/: integration.rs
