[package]
name = "blackswan-node"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[build-dependencies]
napi-build = "2"

[dependencies]
blackswan = { path = "../.." }
napi = { version = "3", features = ["async", "tokio_rt", "napi6"] }
napi-derive = "3"
tokio = { version = "1", features = ["rt-multi-thread"] }
serde_json = "1"
