[package]
name = "blackswan-python"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
blackswan = { path = "../.." }
pyo3 = { version = "0.25", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.25", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde_json = "1"
