[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "blackswan"
version = "0.1.0"
description = "Persistent memory system for AI agents"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
poc = [
    "langgraph>=0.2.46",
    "langchain-openai>=0.3.29",
    "openai>=1.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.maturin]
features = []
manifest-path = "Cargo.toml"
module-name = "blackswan._native"
python-source = "python"
